html outline and gitignore

--- a/index.html
+++ b/index.html
@@ -8,8 +8,46 @@
 </head>
 
 <body>
-    <h1>RUN BUDDY</h1>
-    What We Do What You Do Your Trainers Reach Out
+    <!-- Website Intro -->
+    <header>
+        <h1>RUN BUDDY</h1>
+    </header>
+    <!-- Navigation -->
+    <nav>
+        <ul>
+            <li>
+                <a href="#WhatWeDo">What We Do</a>
+                <a href="#WhatYouDo">What You Do</a>
+                <a href="#YourTrainers">Your Trainers</a>
+                <a href="#Reach Out">Reach Out</a>
+
+            </li>
+        </ul>
+    </nav>
+
+    <!-- what We Do Section -->
+    <section>
+        <h2>What We Do</h2>
+    </section>
+
+    <!-- What You Do Section -->
+    <section>
+        <h2>What You Do</h2>
+    </section>
+
+    <!-- Your Trainers Section -->
+    <section>
+        <h2>Your Trainers</h2>
+    </section>
+
+    <!-- Reach Out Section -->
+    <section>
+        <h2>What We Do</h2>
+    </section>
+
+    <footer>
+        <h2>❤️ Made with love by Run Buddy.</h2>
+    </footer>
 </body>
 
 </html>
