branding and navigation links set

--- a/index.html
+++ b/index.html
@@ -8,23 +8,25 @@
 </head>
 
 <body>
-    <!-- Website Intro -->
+    <!-- Brand Intro -->
     <header>
-        <h1>RUN BUDDY</h1>
+        <h1>
+            <a href="/">RUN BUDDY</a>
+        </h1>
+
+        <!-- Navigation -->
+        <nav>
+            <ul>
+                <li>
+                    <a href="#WhatWeDo">What We Do</a>
+                    <a href="#WhatYouDo">What You Do</a>
+                    <a href="#YourTrainers">Your Trainers</a>
+                    <a href="#Reach Out">Reach Out</a>
+
+                </li>
+            </ul>
+        </nav>
     </header>
-    <!-- Navigation -->
-    <nav>
-        <ul>
-            <li>
-                <a href="#WhatWeDo">What We Do</a>
-                <a href="#WhatYouDo">What You Do</a>
-                <a href="#YourTrainers">Your Trainers</a>
-                <a href="#Reach Out">Reach Out</a>
-
-            </li>
-        </ul>
-    </nav>
-
     <!-- what We Do Section -->
     <section>
         <h2>What We Do</h2>
