--- a/index.html
+++ b/index.html
@@ -47,9 +47,13 @@
     <section>
         <h2>What We Do</h2>
     </section>
-
+    <!-- Footer -->
     <footer>
         <h2>❤️ Made with love by Run Buddy.</h2>
+        <div>
+            <a href="#">Read our Policy</a>
+            &copy;2019 Run Buddy, Inc.
+        </div>
     </footer>
 </body>
 
