Hero form CSS added for button and text boxes

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
             <!-- Adding a Form element -->
             <form>
                 <label for="name">Enter full name:</label>
-                <input type="text" name="name" id="name" placeholder="Your Name">
+                <input type="text" name="name" id="name" placeholder="Your Name" class="form-input">
 
                 <label for="email">Enter email address</label>
-                <input type="email" name="email" id="email" placeholder="Email Address">
+                <input type="email" name="email" id="email" placeholder="Email Address" class="form-input">
 
                 <label for="phoneno">Enter a telephone Number</label>
-                <input type="tel" name="phoneno" id="phoneno" placeholder="Phone Number">
+                <input type="tel" name="phoneno" id="phoneno" placeholder="Phone Number" class="form-input">
 
                 <p>Have you worked out with a trainer before?
 
