--- a/index.html
+++ b/index.html
@@ -65,17 +65,38 @@
     <!-- End of Hero -->
 
     <!-- what We Do Section -->
-    <section>
+    <section id="what-we-do">
         <h2>What We Do</h2>
+        <p>
+            butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct
+            trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie
+            Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings
+            narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
+        </p>
     </section>
 
     <!-- What You Do Section -->
-    <section>
+    <section id="what-you-do">
         <h2>What You Do</h2>
+        <!-- Step1 -->
+        <h3>Step 1:Fill Out The Form Above</h3>
+        <p>You're already here, so why not?</p>
+
+        <!-- Step 2 -->
+        <h3>Step 2:Consult With One Of Our Trainers.</h3>
+        <p>Are you here to build muscle, lose weight, or just feel good?</p>
+
+        <!-- Step 3 -->
+        <h3>Step 3: Get Running.</h3>
+        <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+
+        <!-- Step 4 -->
+        <h3>Step 4: See Results</h3>
+        <p>Bi-Weekly checkins with your trainer will keep you focused.</p>
     </section>
 
     <!-- Your Trainers Section -->
-    <section>
+    <section id="">
         <h2>Your Trainers</h2>
     </section>
 
