Added svg images to the 4 steps

--- a/index.html
+++ b/index.html
@@ -78,21 +78,37 @@
     <!-- What You Do Section -->
     <section id="what-you-do">
         <h2>What You Do</h2>
-        <!-- Step1 -->
-        <h3>Step 1:Fill Out The Form Above</h3>
-        <p>You're already here, so why not?</p>
+        <div>
+            <!-- Step1 -->
+            <img src="./assets/images/01-04-svgs/step-1.svg" alt="What you do img">
+            <h3>Step 1:Fill Out The Form Above</h3>
+            <p>You're already here, so why not?</p>
+        </div>
+
 
         <!-- Step 2 -->
-        <h3>Step 2:Consult With One Of Our Trainers.</h3>
-        <p>Are you here to build muscle, lose weight, or just feel good?</p>
+        <div>
+            <img src="./assets/images/01-04-svgs/step-2.svg" alt="Our Trainers image">
+            <h3>Step 2:Consult With One Of Our Trainers.</h3>
+            <p>Are you here to build muscle, lose weight, or just feel good?</p>
+        </div>
+
 
         <!-- Step 3 -->
-        <h3>Step 3: Get Running.</h3>
-        <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+        <div>
+            <img src="./assets/images/01-04-svgs/step-3.svg" alt="Get Running image">
+            <h3>Step 3: Get Running.</h3>
+            <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+
+        </div>
 
         <!-- Step 4 -->
-        <h3>Step 4: See Results</h3>
-        <p>Bi-Weekly checkins with your trainer will keep you focused.</p>
+        <div>
+            <img src="./assets/images/01-04-svgs/step-4.svg" alt="See Results image">
+            <h3>Step 4: See Results</h3>
+            <p>Bi-Weekly checkins with your trainer will keep you focused.</p>
+        </div>
+
     </section>
 
     <!-- Your Trainers Section -->
