--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <!-- End of Hero -->
 
     <!-- what We Do Section -->
-    <section id="what-we-do">
+    <section id="what-we-do" class="intro">
         <h2>What We Do</h2>
         <p>
             butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct
