style contact info

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     </section>
 
     <!-- Reach Out Section -->
-    <section id="reach-out">
+    <section id="reach-out" class="reachout">
         <h2 class=" section-title secondary-border">Reach Out</h2>
         <div class="contact-info">
             <iframe
