Contact info styling Complete

--- a/index.html
+++ b/index.html
@@ -161,15 +161,15 @@
     </section>
 
     <!-- Reach Out Section -->
-    <section id="reach-out" class="reachout">
-        <h2 class=" section-title secondary-border">Reach Out</h2>
+    <section id="reach-out" class="contact">
+        <h2 class=" section-title secondary-border">Reach Out</h2> <br>
         <div class="contact-info">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3163.0840341578723!2d-122.2553506488908!3d37.553083879701255!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808f98d9d1029ffb%3A0xb7d1b0ec75713a88!2s1159%20Foster%20City%20Blvd%2C%20Foster%20City%2C%20CA%2094404!5e0!3m2!1sen!2sus!4v1612156594092!5m2!1sen!2sus"
                 width="400" height="400" frameborder="0" style="border:0;" allowfullscreen>
             </iframe>
         </div>
-        <div>
+        <div class="contact-info">
             <h3>RunBuddy</h3>
             <p>Any questions or concerns before signing up? <br> Let us know and we'll be happy to talk to you!</p>
             <address>
