add flex to the hero

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
     <!-- Hero/Jumbotron -->
     <section class="hero">
-        <div class="hero-text">
+        <div class="hero-text hero-cta">
             <h2>Start Building <br> Habits</h2>
             <p>
                 seitan heirloom post-ironic pop-up iPhone mlkshk hella selfies fashion axe occupy readymade put a bird
@@ -79,24 +79,44 @@
 
     <!-- what We Do Section -->
     <section id="what-we-do" class="intro">
-        <h2 class="section-title primary-border">What We Do</h2>
-        <p>
-            butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct
-            trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie
-            Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings
-            narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
-        </p>
+        <div class="flex-row">
+            <h2 class="section-title primary-border">What We Do</h2>
+        </div>
+        <div class="flex-row">
+            <p>
+                butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct
+                trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack
+                fixie
+                Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel
+                meggings
+                narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
+            </p>
+        </div>
     </section>
 
     <!-- What You Do Section -->
     <section id="what-you-do" class="steps">
         <h2 class="section-title secondary-border">What You Do</h2>
-        <div>
+        <div class="step">
             <!-- Step1 -->
-            <img src="./assets/images/01-04-svgs/step-1.svg" alt="What you do img">
-            <h3>Step 1: <span>Fill Out The Form Above</span> </h3>
-            <p>You're already here, so why not?</p>
+            <h3>Step 1:</h3>
+
+            <div class="step-info">
+                <div class="step-img">
+                    <img src="./assets/images/01-04-svgs/step-1.svg" alt="What you do img">
+                </div>
+                <div>
+                    <h4>Fill Out The Form Above</h4>
+                    <p>You're already here, so why not?</p>
+                </div>
+            </div>
         </div>
+
+
+
+
+
+
 
 
         <!-- Step 2 -->
