--- a/index.html
+++ b/index.html
@@ -97,15 +97,17 @@
     <!-- What You Do Section -->
     <section id="what-you-do" class="steps">
         <h2 class="section-title secondary-border">What You Do</h2>
+
+
+        <!-- Step1 -->
         <div class="step">
-            <!-- Step1 -->
             <h3>Step 1:</h3>
 
             <div class="step-info">
                 <div class="step-img">
                     <img src="./assets/images/01-04-svgs/step-1.svg" alt="What you do img">
                 </div>
-                <div>
+                <div class="step-text">
                     <h4>Fill Out The Form Above</h4>
                     <p>You're already here, so why not?</p>
                 </div>
@@ -113,33 +115,51 @@
         </div>
 
 
-
-
-
-
-
-
         <!-- Step 2 -->
-        <div>
-            <img src="./assets/images/01-04-svgs/step-2.svg" alt="Our Trainers image">
-            <h3>Step 2: <span>Consult With One Of Our Trainers.</span> </h3>
-            <p>Are you here to build muscle, lose weight, or just feel good?</p>
+        <div class="step">
+            <h3>Step 2: </h3>
+            <div class="step-info">
+                <div class="step-img">
+                    <img src="./assets/images/01-04-svgs/step-2.svg" alt="Our Trainers image">
+                </div>
+                <div class="step-text">
+                    <h4>Consult With One Of Our Trainers.</h4>
+                    <p>Are you here to build muscle, lose weight, or just feel good?</p>
+                </div>
+
+            </div>
         </div>
 
 
         <!-- Step 3 -->
-        <div>
-            <img src="./assets/images/01-04-svgs/step-3.svg" alt="Get Running image">
-            <h3>Step 3: <span>Get Running.</span> </h3>
-            <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
-
+        <div class="step">
+            <h3>Step 3: </h3>
+            <div class="step-info">
+                <div class="step-img">
+                    <img src="./assets/images/01-04-svgs/step-3.svg" alt="Get Running image">
+                </div>
+                <div class="step-text">
+                    <h4>Get Running.</h4>
+                    <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+                </div>
+            </div>
         </div>
 
         <!-- Step 4 -->
-        <div>
-            <img src="./assets/images/01-04-svgs/step-4.svg" alt="See Results image">
-            <h3>Step 4: <span>See Results</span> </h3>
-            <p>Bi-Weekly checkins with your trainer will keep you focused.</p>
+        <div class="step">
+            <h3>Step 4:</h3>
+            <div class="step-info">
+                <div class="step-img">
+                    <img src="./assets/images/01-04-svgs/step-4.svg" alt="See Results image">
+                </div>
+
+                <div class="step-text">
+                    <h4>See Results</h4>
+                    <p>Bi-Weekly checkins with your trainer will keep you focused.</p>
+                </div>
+            </div>
+
+
         </div>
 
     </section>
