--- a/index.html
+++ b/index.html
@@ -165,52 +165,58 @@
     </section>
 
     <!-- Your Trainers Section -->
-    <section id="your-trainers" class="trainers">
+    <section id="your-trainers">
         <h2 class="section-title primary-border">Your Trainers</h2>
+        <div class="trainers">
+            <!-- Trainer 1 -->
+            <article class="trainer">
+                <img src="./assets/images/01-05-trainers/trainer-1.jpg"
+                    alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Arron Stephens</h3>
+                    <h4 class="trainer-role">Speed / Strength</h4>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate
+                        commodi
+                        saepe culpa sed
+                        itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis
+                        repellat!
+                    </p>
+                </div>
+            </article>
 
-        <!-- Trainer 1 -->
-        <article class="trainer">
-            <img src="./assets/images/01-05-trainers/trainer-1.jpg"
-                alt="Arron Stephens in his workout clothes, ready to pump iron" />
-            <div class="trainer-bio text-left">
-                <h3>Arron Stephens</h3>
-                <h4>Speed / Strength</h4>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi
-                    saepe culpa sed
-                    itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis
-                    repellat!
-                </p>
-            </div>
-        </article>
+            <!-- Trainer 2 -->
+            <article class="trainer">
+                <img src=" ./assets/images/01-05-trainers/trainer-2.jpg"
+                    alt="Joanna Gill is ready for endurance training">
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Joanna Gill</h3>
+                    <h4 class="trainer-role">Endurance</h4>
+                    <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate
+                        commodi
+                        saepe culpa sed
+                        itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis
+                        repellat!
+                    </p>
+                </div>
+            </article>
 
-        <!-- Trainer 2 -->
-        <article class="trainer trainer-2">
-            <img src="./assets/images/01-05-trainers/trainer-2.jpg" alt="Joanna Gill is ready for endurance training">
-            <div class="trainer-bio text-right">
-                <h3>Joanna Gill</h3>
-                <h4>Endurance</h4>
-                <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi
-                    saepe culpa sed
-                    itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis
-                    repellat!
-                </p>
-            </div>
-        </article>
+            <!-- Trainer 3 -->
+            <article class="trainer">
+                <img src="./assets/images/01-05-trainers/trainer-3.jpg"
+                    alt="Harry The Headband Smith ready for strength training ">
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Harry "The Headband" Smith</h3>
+                    <h4 class="trainer-role">Strength</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate
+                        commodi
+                        saepe culpa sed
+                        itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis
+                        repellat!</p>
+                </div>
+            </article>
+        </div>
 
-        <!-- Trainer 3 -->
-        <article class="trainer">
-            <img src="./assets/images/01-05-trainers/trainer-3.jpg"
-                alt="Harry The Headband Smith ready for strength training ">
-            <div class="trainer-bio text-left">
-                <h3>Harry "The Headband" Smith</h3>
-                <h4>Strength</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi
-                    saepe culpa sed
-                    itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis
-                    repellat!</p>
-            </div>
-        </article>
     </section>
 
     <!-- Reach Out Section -->
