--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <label for="phoneno">Enter a telephone Number</label>
                 <input type="tel" name="phoneno" id="phoneno" placeholder="Phone Number" class="form-input">
 
-                <p>Have you worked out with a trainer before?
+                <!-- <p>Have you worked out with a trainer before?
 
                     <input type="radio" name="trainer-confirm" id="trainer-yes">
                     <label for="trainer-yes">Yes</label>
@@ -70,6 +70,24 @@
                 <p>
                     <label for="acknowledge">I acknowledge that I am at least 18 years of age.</label>
                     <input type="checkbox" name="acknowledge" id="acknowledge">
+                </p> -->
+
+                <p>
+                    Have you worked out with a trainer before?
+                    <span class="radio-wrapper">
+                        <input type="radio" name="trainer-confirm" id="trainer-yes" />
+                        <label for="trainer-yes">Yes</label>
+                    </span>
+                    <span class="radio-wrapper">
+                        <input type="radio" name="trainer-confirm" id="trainer-no" />
+                        <label for="trainer-no">No</label>
+                    </span>
+                </p>
+                <p>
+                    <span class="checkbox-wrapper">
+                        <input type="checkbox" name="age-confirm" id="checkbox" />
+                        <label for="checkbox">I acknowledge that I am at least 18 years of age.</label>
+                    </span>
                 </p>
                 <button type="submit">Get Running!</button>
             </form>
